# flyv-connector-xplane

./: CMakeLists.txt  README.md
plugin-out/64/: mac.xpl  win.xpl
src/: DataCollector.h  JsonSerializer.h  SimData.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp
